<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stats_tv_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="@string/stats_collect"
            android:textSize="25dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/stats_linear_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_tv_collect">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_today_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/stats_today_number"
                android:gravity="center"
                android:text="@string/stats_default"
                android:textSize="@dimen/default_text_number" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_week_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/stats_week_number"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/stats_default"
                android:textSize="@dimen/default_text_number" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_month_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/stats_month_number"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/stats_default"
                android:textSize="@dimen/default_text_number" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/stats_linear_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_linear_number">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_today_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15dp"
                android:importantForAccessibility="no"
                android:text="@string/stats_today_number" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_week_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:textSize="15dp"
                android:text="@string/stats_week_number" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stats_tv_month_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15dp"
                android:importantForAccessibility="no"
                android:text="@string/stats_month_number" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stats_tv_recent_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/stats_recent_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_linear_type" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stats_recent_line"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_tv_recent_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stats_tv_recent_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="@string/stats_recent_bar"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_recent_line" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/stats_recent_bar"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="30dp"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_tv_recent_bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>